Some more random fixes

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -16,6 +16,7 @@
 	<div class="row">
 		<div class="col">
 			<h1>Made with <i class="fas fa-heart text-danger"></i> for <img src="{% static 'bazaar/images/ruhacks_logo.svg' %}" style="height: 50px;">.</h1>
+			<h5>I'm so tired I don't think I can write a proper about page.</h5>
 		</div>
 	</div>
 </div>
