--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,10 +17,8 @@
 		<div class="col">
 			<img src="{% static 'bazaar/images/icon.svg' %}" style="height: 100px;">
 			<h1 class="display-4 mt-3">Welcome to the Bazaar</h1>
-			<h3 class="text-modern">Reduce the time you spend going outdoors and flatten the curve.</h3>
-			<p>Bazaar makes it easy to coordinate purchases with your friends, family, and acquaintances.</p>
-			<h5>Made with <i class="fas fa-heart text-danger"></i> for <img
-					src="{% static 'bazaar/images/ruhacks_logo.svg' %}" style="height: 20px;"> Ryerson University Hacks.</h5>
+			<h3 class="text-modern">Bazaar makes it easy to coordinate purchases, trades, and transactions of goods with your friends, family, and acquaintances.</h3>
+			<p>Reduce the time you spend going outdoors and flatten the curve.</p>
 		</div>
 	</div>
 </div>
