--- a/requests/templates/requests/detail_outgoing.html
+++ b/requests/templates/requests/detail_outgoing.html
@@ -94,13 +94,8 @@
 		<div class="col">
 			<a href="/requests" class="btn text-uppercase text-condensed btn-primary"><i class="fas fa-arrow-left"></i>
 				Back</a>
-			{% if order_request.status == 'STARTED' %}
-			<a href="accept" class="btn text-uppercase text-condensed btn-success">👍 Accept</a>
-			<a href="reject" class="btn text-uppercase text-condensed btn-danger">👎 Reject</a>
-			<div class="alert alert-info mt-3">Only accept this order request if you are capable of purchasing the items and
-				delivering them.</div>
-			{% elif order_request.status == 'ACCEPTED' %}
-			<a href="done" class="btn text-uppercase text-condensed btn-success">👍 Mark as Done</a>
+			{% if order_request.status == 'PENDING' %}
+			<a href="reject" class="btn text-uppercase text-condensed btn-danger"><i class="fas fa-undo-alt"></i> Withdraw</a>
 			{% endif %}
 		</div>
 	</div>
